js bug - js chan ging navbars bacground color, would activate on smaller screen scroll. Also, signed-user nav was changing font to 18px ignoring media queries, removed that too.

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -63,7 +63,6 @@
 
 .test-navbar-scroll {
   color: $text-light;
-  font-size: 18px;
 }
 
 .sign-up-button-margin {
